[gd_scene load_steps=5 format=2]

[ext_resource path="res://2D/Scripts/login_window.gd" type="Script" id=1]
[ext_resource path="res://2D/Scripts/save_id.gd" type="Script" id=2]
[ext_resource path="res://2D/Scripts/login_field.gd" type="Script" id=3]
[ext_resource path="res://2D/Scripts/enter_button.gd" type="Script" id=4]

[node name="login_window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 810.0
margin_top = 850.0
margin_right = 1110.0
margin_bottom = 1060.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="save_id" type="CheckBox" parent="."]
margin_left = 60.0
margin_top = 158.0
margin_right = 136.0
margin_bottom = 182.0
focus_next = NodePath("../enter_button")
action_mode = 0
button_mask = 3
text = "Save ID"
align = 2
script = ExtResource( 2 )

[node name="login_field" type="LineEdit" parent="."]
margin_left = 65.0
margin_top = 60.0
margin_right = 235.0
margin_bottom = 84.0
focus_next = NodePath("../password_field")
align = 1
max_length = 12
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "User ID"
placeholder_alpha = 0.5
caret_blink = true
script = ExtResource( 3 )

[node name="password_field" type="LineEdit" parent="."]
margin_left = 65.0
margin_top = 126.0
margin_right = 235.0
margin_bottom = 150.0
focus_next = NodePath("../save_id")
align = 1
max_length = 24
secret = true
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Password"
placeholder_alpha = 0.5
caret_blink = true

[node name="enter_button" type="Button" parent="."]
margin_left = 171.0
margin_top = 161.0
margin_right = 230.0
margin_bottom = 182.0
focus_next = NodePath("../../config_button")
text = "Enter"
script = ExtResource( 4 )
[connection signal="pressed" from="enter_button" to="enter_button" method="_on_Button_pressed"]
